feat: implement scalable GitHub coding problem import