@@ -9,20 +9,30 @@ import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Base64;
+import java.util.Collections;
 import java.util.List;
 
 @Service
 public class CodingProblemGithubService {
 
-    private final HttpClient httpClient;
+    private static final int MAX_FILES = 20000;
 
+    private final HttpClient httpClient;
     private final ObjectMapper objectMapper;
 
     public CodingProblemGithubService() {
-        this.httpClient = HttpClient.newHttpClient();
-        this.objectMapper = new ObjectMapper();
+        this.httpClient =
+                HttpClient.newBuilder()
+                        .followRedirects(
+                                HttpClient.Redirect.NORMAL
+                        )
+                        .build();
+
+        this.objectMapper =
+                new ObjectMapper();
     }
 
     public List<String> getRepositoryFiles(
@@ -32,72 +42,121 @@ public class CodingProblemGithubService {
         if (repository == null ||
                 repository.isBlank()) {
 
-            return List.of();
+            return Collections.emptyList();
         }
 
-        String url =
-                "https://api.github.com/repos/"
-                        + repository.trim()
-                        + "/contents";
+        String normalizedRepository =
+                repository
+                        .trim()
+                        .replaceAll(
+                                "^https?://github\\.com/",
+                                ""
+                        )
+                        .replaceAll(
+                                "/+$",
+                                ""
+                        );
 
         try {
 
-            HttpRequest request =
-                    HttpRequest.newBuilder()
-                            .uri(URI.create(url))
-                            .header(
-                                    "Accept",
-                                    "application/vnd.github+json"
-                            )
-                            .header(
-                                    "X-GitHub-Api-Version",
-                                    "2022-11-28"
-                            )
-                            .GET()
-                            .build();
-
-            HttpResponse<String> response =
-                    httpClient.send(
-                            request,
-                            HttpResponse.BodyHandlers.ofString()
-                    );
-
-            if (response.statusCode() != 200) {
-                return List.of();
-            }
-
-            JsonNode root =
-                    objectMapper.readTree(
-                            response.body()
+            String branch =
+                    getDefaultBranch(
+                            normalizedRepository
                     );
 
             List<String> files =
                     new ArrayList<>();
 
-            if (!root.isArray()) {
-                return files;
-            }
-
-            for (JsonNode node : root) {
-
-                if ("file".equals(
-                        node.path("type").asText()
-                )) {
-
-                    String path =
-                            node.path("path").asText();
-
-                    if (!path.isBlank()) {
-                        files.add(path);
-                    }
-                }
-            }
+            collectFilesRecursively(
+                    normalizedRepository,
+                    "",
+                    branch,
+                    files
+            );
 
             return files;
 
         } catch (Exception exception) {
 
-            return List.of();
+            return Collections.emptyList();
+        }
+    }
+
+    private void collectFilesRecursively(
+            String repository,
+            String path,
+            String branch,
+            List<String> files
+    ) throws IOException, InterruptedException {
+
+        if (files.size() >= MAX_FILES) {
+            return;
+        }
+
+        String url =
+                "https://api.github.com/repos/"
+                        + repository
+                        + "/contents";
+
+        if (!path.isBlank()) {
+            url += "/" + path;
+        }
+
+        url += "?ref=" + branch;
+
+        HttpResponse<String> response =
+                sendGet(url);
+
+        if (response.statusCode() != 200) {
+            return;
+        }
+
+        JsonNode root =
+                objectMapper.readTree(
+                        response.body()
+                );
+
+        if (!root.isArray()) {
+            return;
+        }
+
+        for (JsonNode node : root) {
+
+            if (files.size() >= MAX_FILES) {
+                return;
+            }
+
+            String type =
+                    node.path("type").asText();
+
+            String itemPath =
+                    node.path("path").asText();
+
+            if (itemPath.isBlank()) {
+                continue;
+            }
+
+            if ("file".equals(type)) {
+
+                if (isPotentialProblemFile(
+                        itemPath
+                )) {
+
+                    files.add(itemPath);
+                }
+
+                continue;
+            }
+
+            if ("dir".equals(type)) {
+
+                collectFilesRecursively(
+                        repository,
+                        itemPath,
+                        branch,
+                        files
+                );
+            }
         }
     }
 
@@ -114,33 +173,36 @@ public class CodingProblemGithubService {
             return "";
         }
 
+        String normalizedRepository =
+                repository
+                        .trim()
+                        .replaceAll(
+                                "^https?://github\\.com/",
+                                ""
+                        )
+                        .replaceAll(
+                                "/+$",
+                                ""
+                        );
+
+        String normalizedPath =
+                path
+                        .trim()
+                        .replaceFirst(
+                                "^/+",
+                                ""
+                        );
+
         String url =
                 "https://api.github.com/repos/"
-                        + repository.trim()
+                        + normalizedRepository
                         + "/contents/"
-                        + path;
+                        + normalizedPath;
 
         try {
 
-            HttpRequest request =
-                    HttpRequest.newBuilder()
-                            .uri(URI.create(url))
-                            .header(
-                                    "Accept",
-                                    "application/vnd.github+json"
-                            )
-                            .header(
-                                    "X-GitHub-Api-Version",
-                                    "2022-11-28"
-                            )
-                            .GET()
-                            .build();
-
             HttpResponse<String> response =
-                    httpClient.send(
-                            request,
-                            HttpResponse.BodyHandlers.ofString()
-                    );
+                    sendGet(url);
 
             if (response.statusCode() != 200) {
                 return "";
@@ -158,18 +220,141 @@ public class CodingProblemGithubService {
                 return "";
             }
 
+            String cleanContent =
+                    encodedContent
+                            .replaceAll(
+                                    "\\s+",
+                                    ""
+                            );
+
             return new String(
-                    Base64.getMimeDecoder().decode(
-                            encodedContent
+                    Base64.getDecoder().decode(
+                            cleanContent
                     ),
-                    java.nio.charset.StandardCharsets.UTF_8
+                    StandardCharsets.UTF_8
             );
 
-        } catch (IOException |
-                 InterruptedException |
-                 IllegalArgumentException exception) {
+        } catch (
+                IOException |
+                InterruptedException |
+                IllegalArgumentException exception
+        ) {
 
             return "";
         }
+    }
+
+    private String getDefaultBranch(
+            String repository
+    ) throws IOException, InterruptedException {
+
+        String url =
+                "https://api.github.com/repos/"
+                        + repository;
+
+        HttpResponse<String> response =
+                sendGet(url);
+
+        if (response.statusCode() != 200) {
+
+            return "main";
+        }
+
+        JsonNode root =
+                objectMapper.readTree(
+                        response.body()
+                );
+
+        String branch =
+                root.path(
+                        "default_branch"
+                ).asText();
+
+        if (branch == null ||
+                branch.isBlank()) {
+
+            return "main";
+        }
+
+        return branch;
+    }
+
+    private HttpResponse<String> sendGet(
+            String url
+    ) throws IOException, InterruptedException {
+
+        HttpRequest request =
+                HttpRequest.newBuilder()
+                        .uri(
+                                URI.create(url)
+                        )
+                        .header(
+                                "Accept",
+                                "application/vnd.github+json"
+                        )
+                        .header(
+                                "X-GitHub-Api-Version",
+                                "2022-11-28"
+                        )
+                        .header(
+                                "User-Agent",
+                                "AI-Placement-Platform"
+                        )
+                        .GET()
+                        .build();
+
+        return httpClient.send(
+                request,
+                HttpResponse.BodyHandlers.ofString()
+        );
+    }
+
+    private boolean isPotentialProblemFile(
+            String path
+    ) {
+
+        String lowerPath =
+                path.toLowerCase();
+
+        if (
+                lowerPath.contains("/.git/") ||
+                lowerPath.startsWith(".git/")
+        ) {
+
+            return false;
+        }
+
+        if (
+                lowerPath.contains(
+                        "/node_modules/"
+                ) ||
+                lowerPath.contains(
+                        "/target/"
+                ) ||
+                lowerPath.contains(
+                        "/build/"
+                ) ||
+                lowerPath.contains(
+                        "/dist/"
+                )
+        ) {
+
+            return false;
+        }
+
+        return lowerPath.endsWith(".json") ||
+                lowerPath.endsWith(".md") ||
+                lowerPath.endsWith(".txt") ||
+                lowerPath.endsWith(".yaml") ||
+                lowerPath.endsWith(".yml") ||
+                lowerPath.endsWith(".java") ||
+                lowerPath.endsWith(".py") ||
+                lowerPath.endsWith(".js") ||
+                lowerPath.endsWith(".ts") ||
+                lowerPath.endsWith(".cpp") ||
+                lowerPath.endsWith(".c") ||
+                lowerPath.endsWith(".cs") ||
+                lowerPath.endsWith(".go") ||
+                lowerPath.endsWith(".rs");
     }
 }
